cros: bounds request to client when ash adjusts bounds

changes:
In crrev.com/c/930661, chrome changes the bounds locally which is backed
by ClientControlledShellSurface without requesting Android for bounds
change. This could lead to widget size inconsistent state.

Bug: 831035
Test: test coverage
Change-Id: I2d3c0fbc6b39f9637ac55d7f0292c2cc8a08c78e
Reviewed-on: https://chromium-review.googlesource.com/1010906
Commit-Queue: Qiang Xu <warx@google.com>
Reviewed-by: David Reveman <reveman@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558039}
Former-commit-id: f8f9b2ef64b225e7b6fdb21ec17a7a260eb06038